# ArchVM

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  asmtest.sa  code.doc  code.sh  code.txt  ex.sa  nod.sa  nod.sb  otchetRA.doc  qq  referat.doc  reportRA.doc  test.sa  test.sc  travis-build.sh  tst.sa  tst.sb
asm/: CMakeLists.txt  Makefile
asm/include/: asm.h
asm/src/: asm.c  main.c
basic/: .gitignore  CMakeLists.txt  Makefile
basic/include/: basic.h
basic/src/: basic.c  main.c
bc/: .gitignore  CMakeLists.txt  Makefile
bc/include/: bc.h
bc/src/: bc.c
bc/tst/: main.c
consoleSC/: .gitignore  CMakeLists.txt  Makefile
consoleSC/include/: term.h
consoleSC/src/: main.c  term.c
consoleSC/tst/: main.c
cpu/: CMakeLists.txt  Makefile
cpu/include/: cpu.h
cpu/src/: change.c  command.c  cpu.c  global.c  handlers.c  print.c  read.c  timer.c
hardDrive/: CMakeLists.txt  Makefile
hardDrive/include/: hardDrive.h  harddrive.h
hardDrive/src/: #hardDrive.c#  #main.c#  .#main.c  a.out  functions.c  hardDrive.c  harddrive.c  main.c
main/: .gitignore  Makefile
main/include/: mainHeader.h
main/src/: main.c
print/: CMakeLists.txt  Makefile
print/include/: write.h  writeInt.h
print/src/: write.c  writeInt.c
readKey/: .gitignore  CMakeLists.txt  Makefile
readKey/include/: readkey.h
readKey/src/: readkey.c
readKey/tst/: main.c
scan/: CMakeLists.txt  Makefile
scan/include/: readInt.h
scan/src/: readInt.c
simpleComputer/: .gitignore  CMakeLists.txt  Makefile
simpleComputer/include/: sc.h  sc_command.h  sc_memory.h  sc_register.h
simpleComputer/src/: global.c  main.c  sc_command.c  sc_memory.c  sc_register.c
simpleComputer/tests/: Makefile
simpleComputer/tests/include/: tests.h
simpleComputer/tests/src/: main.c  tests.c
simpleComputer/tst/: main.c
tests/: CMakeLists.txt  Makefile
tests/include/: tests.h
tests/src/: main.c  main_ctest.c  testsAsm.c  testsAsm_ctest.c  testsBasic.c  testsBasic_ctest.c  testsSC.c  testsSC_ctest.c
